# skey-portable-v2

./: README.md
skey/: AUTHORS  ChangeLog  NEWS  autogen.sh  configure.ac
skey/src/: Makefile  Makefile.am  debug.c  debug.h  md4.c  md4.h  put.c  skey.c  skey.h  skeyinit.c  skeylogin.c  skeysh.c  skeysubr.c  sysv_shadow.h
skey/src/.deps/: debug.Po  md4.Po  put.Po  skey.Po  skeyinit.Po  skeylogin.Po  skeysh.Po  skeysubr.Po
