# Makefile - S/KEY v2.0
#
# Neil M. Haller <nmh@thumper.bellcore.com>
# Philip R. Karn <karn@chicago.qualcomm.com>
# John S. Walden <jsw@thumper.bellcore.com>
# Scott Chasin <chasin@crimelab.com>
#
# Modifications:
# Cody Moore <cjmoore@cs.sunysb.edu>

bin_PROGRAMS = key keyinit keysh

key_SOURCES = skey.c debug.c skeysubr.c put.c md4.c
keyinit_SOURCES = skeyinit.c debug.c skeysubr.c skeylogin.c put.c md4.c
keysh_SOURCES = skeysh.c debug.c skeysubr.c skeylogin.c put.c md4.c
